--- a/.github/workflows/vps.yml
+++ b/.github/workflows/vps.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Download and setup ngrok
       env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        NGROK_AUTH_TOKEN: ${{32mKgfRdNaX9vZg8PkVQ0aV1bMp_5FfhJE8tRv8ujxeK25DkS}}
       run: |
         curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
         echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
